<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('biodata_pengurus', function (Blueprint $table) {
            $table->uuid('id')->primary();
            $table->string('nama');
            $table->enum('jabatan', ['Ketua Laboratorium', 'Tenaga Laboran']);
            $table->timestamps();
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('biodata_pengurus');
    }
}; 