<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('layanan_pengujian', function (Blueprint $table) {
            $table->id();
            $table->string('namaLayanan')->unique();
            $table->text('deskripsi')->nullable();
            $table->unsignedSmallInteger('estimasiSelesaiHari');
            $table->unsignedBigInteger('harga')->nullable();
            $table->boolean('isAktif')->default(true);
            $table->longText('instruksiSampel')->nullable();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('layanan_pengujian');
    }
};
